--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
+2006-03-16 Mark Grondona <mgrondona@llnl.gov>
+
+	* : tag version 0.2.
+	
 2006-03-14 Mark Grondona <mgrondona@llnl.gov>
+
 	* : Initial commit.
 
 	* : tag version 0.1.
