--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,6 @@
+Version 0.2 (2006-03-16):
+ - Fixed edac-ctl bug in --register-labels.
+ - Print error in edac-util --report if no memory controllers are found.
+
 Version 0.1 (2006-03-14):
  - Initial release.
