--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-21 Mark Grondona <mgrondona@llnl.gov>
+
+	* edac.spec : Fix permissions in specfile.
+
 2006-03-16 Mark Grondona <mgrondona@llnl.gov>
 
 	* : tag version 0.2.
