--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-28 Mark Grondona <mgrondona@llnl.gov>
+
+	* README : Update with better description of edac-utils components.
+
 2006-03-27 Mark Grondona <mgrondona@llnl.gov>
 
 	* config/x_ac_libsysfs.m4, configure, config.h.in, 
