Add Tyan S2895 DIMM labels to labels.db.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* src/util/edac-ctl : Don't allow MB vendor/model to end in whitespace.
 	  Allow multi-word string for MB vendor (e.g. "TYAN Computer Corp").
 
+	* src/etc/labels.db : Add Tyan S2895 DIMM labels to labels.db.
+
 2006-03-28 Mark Grondona <mgrondona@llnl.gov>
 
 	* README : Update with better description of edac-utils components.
