--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-15 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/util/edac-ctl : Just ignore sysfs labels files that do
+	  not exist. Probably is just unpopulated memory banks.
+
 2006-10-13 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/util/edac-ctl : Fix bug in labels.db parsing which required
