Updates for version 0.6.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+version 0.5 (2007-03-15):
+ - Add Supermicro H8QME to distributed DIMM labels database.
+ - Don't warn about sysfs files that don't exist when registering DIMM labels.
+   This is probably just unpopulated memory banks on motherboard.
+	
 version 0.5 (2006-10-13):
  - Add Supermicro H8DCE to distributed DIMM labels database.
  - Fix labels.db parsing to allow single <mc.row.chan> after each DIMM label.
