--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 
 	* src/etc/labels.db : Add Supermicro H8QME.
 
+	* : tag version 0.6. 
+
 2006-10-13 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/util/edac-ctl : Fix bug in labels.db parsing which required
