o Update DIMM labels for Supermicro H8QM8. o include "noinfo" error counts in edac-util full report. o Change default report format to only report on locations with a positive   error count (unless verbose), old default format is now "simple" report.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-04-18 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/util/edac-util.c : Default report changed to report any
+	  DIMM (or unknown location) with an error count. This is more
+	  useful for diagnosis and thus makes sense to be the defualt.
+	  Old default changed to "simple" report.
+
+	* src/util/edac-util.c : Also report "noinfo" CE and UE count
+	  in full report.
+
+	* src/etc/labels.db : Switch DIMMC and DIMMD locations for H8QM8.
+
 2007-03-15 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/util/edac-ctl : Just ignore sysfs labels files that do
