--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* src/util/edac-util.c : Issue "No errors to report." message to
 	  stdout, not stderr.
 
+	* : tag version 0.8.
+
 2007-04-18 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/util/edac-util.c : Default report changed to report any
