--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-07 Mark Grondona <mgrondona@llnl.gov>
+
+	* : Added official UCRL number.
+
 2007-04-25 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/util/edac-util.c : Issue "No errors to report." message to
