--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+version 0.9 (2007-05-08):
+ - Add manpages for edac-util(1), edac-ctl(8), and edac(3). 
+
 version 0.8 (2007-04-25):
  - Issue edac-util "No errors to report" message to stdout not stderr.
 
