--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-08 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/util/edac-ctl :
+	  Allow for empty labels in --print-labels.
+
 2007-06-05 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/util/edac-ctl :
