--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2008-05-30 Mark Grondona <mgrondona@llnl.gov>
 
+	* : tag v0.14.
+
 	* src/util/edac-ctl.1.in :
 	  Clean up some language and fix typos.
 
