--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-08 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/lib/libedac.c (edac_error_totals) : 
+	  Don't memset tot before it is checked for NULL.
+
 2008-05-30 Mark Grondona <mgrondona@llnl.gov>
 
 	* : tag v0.14.
