Allow edac-utils to properly build out of tree.
This patch allows edac-utils to be correctly built and installed
out-of-tree.

Signed-off-by: Grant Erickson <gerickson@nuovations.com>
---

This patch has been tested on both i686-pc-linux-gnu and
powerpc-4xx-linux-gnu both in-tree and out-of-tree. Implicit with the patch
is re-running aclocal, autoconf and automake to update the distribution.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-18 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/etc/Makefile.am, src/etc/Makefile.in :
+	  Allow edac-utils to be correctly built and installed
+	  out-of-tree.  Grant Erickson <gerickson at nuovations.com>.
+
 2008-09-25 Mark Grondona <mgrondona@llnl.gov>
 
 	* src/etc/labels.db :
