Fix memory leak in edac_handle_destroy
edac_handle_destroy() should also free memory for the handle itself, but
didn't. This patch rectifies the problem.

Reported-by: "Ira W. Snyder" <iws@ovro.caltech.edu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-10 Mark Grondona <mgrondona@llnl.gov>
+
+	* src/lib/libedac.c (edac_handle_destroy) : Fix memory leak 
+	  reported by Ira W. Snyder <iws at ovro dot caltech dot edu>.
+
 2009-01-30 Mark Grondona <mgrondona@llnl.gov>
 
 	* : tag v0.16.1.
