Fix memory leaks in edac-util
Close a couple memory leaks in edac-util(1).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2010-02-10 Mark Grondona <mgrondona@llnl.gov>
 
+	* src/util/edac-util.c : 
+	  Fix a couple  edac-util memory leaks.
+
 	* src/lib/libedac.c (edac_handle_destroy) : Fix memory leak 
 	  reported by Ira W. Snyder <iws at ovro dot caltech dot edu>.
 
