--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.17 (2010-02-10);
+- Fix memory leaks in libedac and edac-util(1).
+
 Version 0.16.1 (2009-01-30);
  - Fix libedac.so library version, which should not have gone
     backwards.
