--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2011-11-09 Mark Grondona <mgrondona@llnl.gov>
 
+	* : tag v0.18.
+
 	* src/util/edac-util.c :
 	  Do not print "No errors to report" if --quiet.
 
